取词触发悬浮窗修改大致完成

--- a/app/src/main/res/layout/view_float_startfetching.xml
+++ b/app/src/main/res/layout/view_float_startfetching.xml
@@ -11,6 +11,6 @@
         android:id="@+id/v_drag"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:background="@color/colorText2"/>
+        android:background="#00ffff"/>
 
 </LinearLayout>
