--- a/app/src/main/res/layout/activity_choicetextnode.xml
+++ b/app/src/main/res/layout/activity_choicetextnode.xml
@@ -4,6 +4,6 @@
     android:id="@+id/fl_textNodesContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/transparent">
+    android:background="#00ffff">
 
 </FrameLayout>
