--- a/app/src/main/res/layout/view_float_fetching_trigger.xml
+++ b/app/src/main/res/layout/view_float_fetching_trigger.xml
@@ -1,17 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/llt_startFetch_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
     android:background="@color/lavender">
 
     <View
         android:id="@+id/v_drag"
         android:layout_width="8px"
         android:layout_height="match_parent"
+        android:layout_gravity="start"
         android:background="@android:color/holo_blue_light"
         tools:ignore="PxUsage" />
+
+    <LinearLayout
+        android:id="@+id/llt_fetchingLoading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:visibility="gone">
+
+        <ProgressBar
+            android:layout_width="60dp"
+            android:layout_height="60dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:text="@string/IsScreenFetching"
+            android:textColor="@color/white"
+            android:textSize="16sp" />
+    </LinearLayout>
 
 </LinearLayout>
