--- a/app/src/main/res/layout-v21/activity_function.xml
+++ b/app/src/main/res/layout-v21/activity_function.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/darkWhite">
+    android:background="@color/darkWhite_100">
 
     <include layout="@layout/actionbar_back_title"
         android:layout_width="match_parent"
@@ -14,9 +14,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:background="@color/white"
+        android:background="@drawable/view_rounded_corners_white"
         android:elevation="2dp"
         android:layout_marginTop="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
         android:padding="10dp">
 
        <LinearLayout
@@ -86,9 +88,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:background="@color/white"
+        android:background="@drawable/view_rounded_corners_white"
         android:elevation="2dp"
         android:layout_marginTop="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
         android:padding="10dp">
 
         <LinearLayout
