--- a/app/src/main/res/layout/activity_apply_permissions.xml
+++ b/app/src/main/res/layout/activity_apply_permissions.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/darkWhite">
+    android:background="@color/darkWhite_100">
 
     <include layout="@layout/actionbar_back_title"
         android:layout_height="?actionBarSize"
