--- a/app/src/main/res/layout/lg_content_dialog.xml
+++ b/app/src/main/res/layout/lg_content_dialog.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/darkWhite">
+    android:background="@color/darkWhite_100">
 
     <TextView
         android:layout_width="match_parent"
